# GEOINTEL_LAGOS_ENGINE

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 1a5dce431497_generate_a_table.py  57ced9d7da86_initial_user_table.py  682b9991a05c_generate_e_table.py  70feeb93fbf4_generate_table.py  783788a81413_admin.py  b1ece41e8ef2_create_user_table.py  b45df7e0808d_generate_user_table.py  b7aab341618c_generate_first_table.py  b9702fad4958_generate_iniatiall_table.py  c79f3f9b4c81_initial_schema.py  ebce0d38cacb_email.py  f05dcd78778b_generate_iniatial_table.py
core/: base.py  config.py  database.py  main.py  security.py
models/: common.py  notification.py  user.py
routes/: auth.py  notification.py
schemas/: auth.py  notifications.py  response.py
services/: auth.py
services/notications/: service.py
services/notications/channels/: base.py  email.py  inapp.py  push.py
services/user/: user_repository.py
tasks/: email_tasks.py
templates/: base.html
templates/emails/: verify_email.html  verify_email.txt
utils/: notification.py  response.py  tokens.py
