[tool.poetry]
name = "geointel"
version = "0.1.0"
description = ""
authors = ["olamide <olamoyegunolamidesammy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.31.0"
alembic = "^1.17.2"
pydantic-settings = "^2.12.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = "^5.6.0"
jinja2 = "^3.1.6"
argon2-cffi = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.12.5"}


[tool.poetry.group.dev.dependencies]
alembic = "^1.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
